--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -76,4 +76,7 @@
         "**/*.toc": true,
         "**/*.blg": true
     },
+    "python-envs.defaultEnvManager": "ms-python.python:conda",
+    "python-envs.defaultPackageManager": "ms-python.python:conda",
+    "python-envs.pythonProjects": [],
 }
